@@ -1,48 +1,13 @@
 {
-  "timestamp" : "2022-07-30T01:24:09Z",
-  "count_outdated" : 388,
-  "uniques_outdated" : 243,
-  "count" : 415,
-  "uniques" : 258,
+  "timestamp" : "2022-08-07T16:28:42Z",
+  "count_outdated" : 402,
+  "uniques_outdated" : 252,
+  "count" : 417,
+  "uniques" : 261,
   "clones" : [
     {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 1, 4 ]
-    },
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-07-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -79,6 +44,20 @@
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
